# icanseeyou_isro

./: .gitignore  README.md  pyproject.toml  requirements.txt
noteboks/: test.py
notebooks/: 01_data_acquisition.ipynb  03_preprocessing.ipynb  04_bls_detection.ipynb  06_validation_models.ipynb
src/data/: __init__.py
src/evaluation/: __init__.py
